assert-struct/tests/snapshots/tuples__tuple_four_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/four_errors.rs:20:20
   |
20 |             quad: (1, 2, 3, 4),  // All four fields wrong
   |                    ^  ^  ^  ^ got 40
   |                    |  |  |
   |                    |  |  got 30
   |                    |  got 20
   |                    got 10
